--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,7 @@
-<h1>Stardew Valley's Item Tracker</h1>
-
+<h1>{{application_name}}</h1>
+<h5>Made for Platform-based Programming Assignment by {{name}}</h5>
 <h4>Item name: </h4>
-<p> {{ name }} </p>
+<p> {{ item_name }} </p>
 <h4>Season: </h4>
 <p> {{ season }} </p>
 <h4>Description: </h4>
