--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,6 +3,10 @@
 {% block content %}
     <h1>{{application_name}}</h1>
     <h5>Made for Platform-based Programming Assignment by {{name}} {{class}} class</h5>
+    <h3>In the past {{days_since_added}} days, you have:</h3>
+    <h3> - Stored {{item_count}} items in the inventory.</h3>
+    <h3> - Gained over {{item_total_worth}} worth of gold. Congratulations!</h3>
+    <h3> </h3>
     <table>
         <tr>
             <th>Name</th>
