--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,19 +1,34 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block content %}
-<h1>Add New Product</h1>
-
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Add Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
-
+<style>
+    .card {
+        width: 800px; /* Adjust the width as needed */
+        margin: 0 auto; /* Center-align the card horizontally */
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: #d9a90c;
+        justify-content: center;
+        margin-top: 150px;
+        color: #fff;
+    }
+</style>
+<div class="card">
+    <div class="card-header">
+        <h1>Add New Product</h1>
+    </div>
+    <div class="card-body">
+        <form method="POST">
+            {% csrf_token %}
+            <table>
+                {{ form.as_table }}
+            </table>
+            <div class="text-center mt-3">
+                <input type="submit" class="btn btn-primary" value="Add Product"/>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
