--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -9,8 +9,16 @@
         border: 3px solid #ddd;
         padding: 8px;
     }
-    h1, h2, h4, h5 {
-    text-align: center;
+    h1, h2, h3, h4, h5, h6 {
+        text-align: center;
+    }
+
+    h3 + h4{
+        margin-top: 80px;
+    }
+
+    h3 {
+        padding-top: 30px;
     }
     
     .button-container {
@@ -21,97 +29,136 @@
         margin: 0 10px;
     }
 
+    .card {
+        margin-top: 150px;
+        border: 1px solid #c89404;
+        display: inline-block; /* Set display to inline-block to make cards adjacent */
+        margin: 10px; /* Adjust margin for spacing between cards */
+        padding: 10px;
+        background-color: #fff;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        max-width: 300px; /* Limit the maximum width of the card */
+        /* Add other card styling properties as needed */
+    }
+
+    .card-container {
+        margin-top:100px;
+        text-align: center; /* Center the cards horizontally */
+        display: flex; /* Display cards horizontally */
+        overflow-x: auto; /* Add horizontal scrolling if needed */
+        align-items:center;
+        justify-content: center;
+    }
+
+    .custom-navbar {
+        background-color: #d9a90c;
+    }
+
+    .card::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .footer-text {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        padding: 10px; /* Optional padding */
+    }
+
+    .navbar-nav .nav-link {
+        color: #fff;
+    }
+
+    .nav-link.disabled {
+        color: #fff;
+    }
+
 </style>
 
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{{application_name}}</h1>
-    <h5>Made for Platform-based Programming F Assignment by Julian</h5>
+<nav class="navbar navbar-expand-lg custom-navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" style="color: #fff;">Stardew Valley's Item Tracker</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'main:create_product' %} ">Create Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'main:logout' %}">Logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true"> {{ name }}</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <h2>Welcome, {{name}}!</h2>
+    <h3>Welcome, {{name}}!</h3>
     {% if days_since_added == 1 %}
-        <h3>In the past day, you have:</h3>
+        <h5>In the past day, you have:</h5>
     {% else %}
-        <h3>In the past {{days_since_added}} days, you have:</h3>
+        <h5>In the past {{days_since_added}} days, you have:</h5>
     {% endif %}
     {% if item_count == 0 %}
-        <h3> - No item stored yet. Keep tracking your items!</h3>
+        <h5> No item stored yet. Keep tracking your items!</h5>
     {% else %}
-        <h3> - Stored {{item_count}} items in the inventory.</h3>
+        <h5> Stored {{item_count}} items in the inventory.</h5>
     {% endif %}
     {% if item_total_worth == 0 %}
-        <h3> - No gold gained yet. Keep tracking your items!</h3>
+        <h5> No gold gained yet. Keep tracking your items!</h5>
     {% else %}
-        <h3> - Gained over {{ item_total_worth }} worth of gold. Congratulations!</h3>
+        <h5> Gained over {{ item_total_worth }} worth of gold. Congratulations!</h5>
     {% endif %}
-    <h3> </h3>
 
-    <table class="bordered-table">
-        <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Season</th>
-            <th>Favorable Weather</th>
-            <th>Amount</th>
-            <th>Date Added</th>
-            <th>Delete Item</th>
-            <th>Reduce Amount</th>
-            <th>Increase Amount</th>
-        </tr>
-    
-        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
-    
+    <div class="container">
+    <div class="card-container">
         {% for item in items %}
-            <tr>
-                <td>{{item.name}}</td>
-                <td>{{item.price}}</td>
-                <td>{{item.description}}</td>
-                <td>{{item.season}}</td>
-                <td>{{item.favorable_weather}}</td>
-                <td>{{item.amount}}</td>
-                <td>{{item.date_added}}</td>
-                <td>
+        <div class="card border-dark mb-3 col-md-4">
+            <div class="card-body">
+                <h5 class="card-title">{{item.name}}</h5>
+                {% comment %} <p class="card-text">{{item.description}}</p> {% endcomment %}
+                <p class="card-text">Price: ${{item.price}}</p>
+                <p class="card-text">Favorable Weather: {{item.favorable_weather}}</p>
+                <p class="card-text">Amount: {{item.amount}}</p>
+                <p class="card-text">Date Added: {{item.date_added}}</p>
+                <div class="card-button-container">
                     <a href="{% url 'main:delete_item' id=item.id %}">
-                        <button>
+                        <button class="btn btn-danger">
                             Delete
                         </button>
                     </a>
-                </td>
-                <td>
                     <a href="{% url 'main:reduce_amount' id=item.id %}">
-                        <button>
+                        <button class="btn btn-warning">
                             Reduce
                         </button>
                     </a>
-                </td>
-                <td>
                     <a href="{% url 'main:increase_amount' id=item.id %}">
-                        <button>
+                        <button class="btn btn-success">
                             Increase
                         </button>
                     </a>
-                </td>
-            </tr>
+                </div>
+            </div>
+        </div>
         {% endfor %}
-    </table>
-
+    </div>
+    
     <br />
 
-    <div class="button-container">
-        <a href="{% url 'main:create_product' %}">
-            <button>
-                Add New Product
-            </button>
-        </a>
-
-        <a href="{% url 'main:logout' %}">
-            <button>
-                Logout
-            </button>
-        </a>
+    <div class="footer-text">
+        <h5>Last login session: {{ last_login }}</h5>
+        <h6>Made for Platform-based Programming F Assignment by Julian</h6>
     </div>
 
-    <h5>Last login session: {{ last_login }}</h5>
 {% endblock content %}
