--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -3,8 +3,8 @@
 {% block content %}
 <style>
     .card {
-        width: 800px; /* Adjust the width as needed */
-        margin: 0 auto; /* Center-align the card horizontally */
+        width: 800px;
+        margin: 0 auto;
         padding: 20px;
         border: 1px solid #ccc;
         border-radius: 5px;
@@ -13,6 +13,19 @@
         justify-content: center;
         margin-top: 150px;
         color: #fff;
+    }
+
+    .btn.btn-primary {
+        background-color: #ffffff;
+        border-color: #007bff;
+        color: #d9a90c;
+    }
+
+    
+    .btn.btn-primary:hover {
+        background-color: #d9a90c;
+        border-color: #0056b3;
+        color: #ffffff;
     }
 </style>
 <div class="card">
